--- a/examples/veins/manhattan/manhattan.ini
+++ b/examples/veins/manhattan/manhattan.ini
@@ -52,7 +52,7 @@ sim-time-limit = 300s
 *.manager.updateInterval = 1s
 *.manager.host = "localhost"
 *.manager.port = 9999
-*.manager.moduleType = "org.car2x.veins.nodes.car_aodv"
+*.manager.moduleType = "org.car2x.veins.nodes.car_aodvRel"
 *.manager.moduleName = "node"
 *.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
